[package]
name = "benchmarks"
build = "build.rs"
version = "0.0.0"
edition = "2021"
publish = false

[[bench]]
name = "suite"
harness = false

[dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
tokio = { version = "1.16.1", features = ["full"] }
ubyte = "0.10"
env_logger = "0.10"
# rand = { version = "0.8", features = ["small_rng"] }
plotters = "0.3"
plotters-backend = "0.3"
tonic = "0.11"
prost = "0.12"
minio = "0.1"

[build-dependencies]
tonic-build = "0.11.0"
# bindgen = "0.69"

[features]
one_node = []
two_node = []
